--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -12,7 +12,7 @@
 
 .visual-side{
     flex: 1.2;
-    background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)),url('nastuh-abootalebi-eHD8Y1Znfpk-unsplash.jpg');
+    background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('../images/nastuh-abootalebi-eHD8Y1Znfpk-unsplash.jpg');
     background-size: cover;
     background-position: center;
     color: white;
